--- a/index.html
+++ b/index.html
@@ -2,56 +2,70 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Adhiparasakthi Engineering College Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login - Adhiparasakthi Engineering College</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #f2f2f2;
-      text-align: center;
-      padding-top: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
     .login-container {
-      background-color: white;
+      background: #fff;
       padding: 30px;
-      border-radius: 10px;
-      display: inline-block;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
+      text-align: center;
+      width: 300px;
     }
-    input[type="text"], input[type="password"] {
-      width: 80%;
+    .login-container img {
+      width: 100px;
+      margin-bottom: 20px;
+    }
+    .login-container h2 {
+      margin-bottom: 20px;
+      font-size: 20px;
+      color: #333;
+    }
+    .login-container input[type="text"],
+    .login-container input[type="password"] {
+      width: 100%;
       padding: 10px;
-      margin: 10px 0;
+      margin: 8px 0;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 6px;
     }
-    button {
-      padding: 10px 20px;
-      background-color: #0077cc;
+    .login-container button {
+      width: 100%;
+      padding: 10px;
+      background-color: #0066cc;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 6px;
       cursor: pointer;
+      margin-top: 10px;
+      font-size: 16px;
     }
-    button:hover {
-      background-color: #005fa3;
-    }
-    img.logo {
-      width: 150px;
-      margin-bottom: 20px;
+    .login-container button:hover {
+      background-color: #004d99;
     }
   </style>
 </head>
 <body>
-
   <div class="login-container">
-    <img src="your-logo-url-here.jpg" alt="Adhiparasakthi Engineering College Logo" class="logo">
+    <!-- Replace the src with the actual logo path -->
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/7f/Adhiparasakthi_Engineering_College_logo.png" 
+         alt="Adhiparasakthi Engineering College Logo">
     <h2>Login</h2>
     <form>
-      <input type="text" placeholder="Username" required><br>
-      <input type="password" placeholder="Password" required><br>
+      <input type="text" placeholder="Username" required>
+      <input type="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
   </div>
-
 </body>
 </html>
