--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <div class="login-container">
     <!-- Replace the src with the actual logo path -->
-    <img src="https://upload.wikimedia.org/wikipedia/en/7/7f/Adhiparasakthi_Engineering_College_logo.png" 
+    <img src="C:\Users\lenovo\Downloads\download.jpeg"
          alt="Adhiparasakthi Engineering College Logo">
     <h2>Login</h2>
     <form>
