--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 <body>
   <div class="login-container">
     <!-- Replace the src with the actual logo path -->
-    <img src="C:\Users\lenovo\Downloads\download.jpeg"
-         alt="Adhiparasakthi Engineering College Logo">
+    <img src="C:\Users\lenovo\Downloads\download.jpeg">
     <h2>Login</h2>
     <form>
       <input type="text" placeholder="Username" required>
