--- a/logo.html
+++ b/logo.html
@@ -58,8 +58,10 @@
 <body>
   <div class="login-container">
     <!-- Replace the src with the actual logo path -->
-    <img src="https://www.google.com/imgres?q=adhiparasakthi%20engineering%20college%20melmaruvathur&imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100067067060032&imgrefurl=https%3A%2F%2Fwww.facebook.com%2Fadhiparasakthiengineeringcollege%2F&docid=nK1wT1sZKUSfvM&tbnid=5DtGMS9Go8cviM&vet=12ahUKEwjSxJuhwr6PAxVC1TgGHSZKNeUQM3oECBkQAA..i&w=625&h=597&hcb=2&ved=2ahUKEwjSxJuhwr6PAxVC1TgGHSZKNeUQM3oECBkQAA" 
-         alt="Adhiparasakthi Engineering College Logo">
+    <img src="C:/Users/lenovo/Downloads/download.jpeg" 
+     alt="Adhiparasakthi Engineering College Logo" 
+     style="width:120px;">
+
     <h2>Login</h2>
     <form>
       <input type="text" placeholder="Username" required>
