--- a/logo.html
+++ b/logo.html
@@ -58,7 +58,7 @@
 <body>
   <div class="login-container">
     <!-- Replace the src with the actual logo path -->
-    <img src="C:/Users/lenovo/Downloads/download.jpeg" 
+    <img src="download.jpeg" 
      alt="Adhiparasakthi Engineering College Logo" 
      style="width:120px;">
 
