--- a/logo.html
+++ b/logo.html
@@ -1,73 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Adhiparasakthi Engineering College</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .login-container {
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
-      text-align: center;
-      width: 300px;
-    }
-    .login-container img {
-      width: 100px;
-      margin-bottom: 20px;
-    }
-    .login-container h2 {
-      margin-bottom: 20px;
-      font-size: 20px;
-      color: #333;
-    }
-    .login-container input[type="text"],
-    .login-container input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    .login-container button {
-      width: 100%;
-      padding: 10px;
-      background-color: #0066cc;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-top: 10px;
-      font-size: 16px;
-    }
-    .login-container button:hover {
-      background-color: #004d99;
-    }
-  </style>
+  <title>Simple Home Page</title>
 </head>
-<body>
-  <div class="login-container">
-    <!-- Replace the src with the actual logo path -->
-    <img src="download.jpeg" 
-     alt="Adhiparasakthi Engineering College Logo" 
-     style="width:120px;">
+<body style="font-family: Arial; text-align: center; margin-top: 50px;">
+  <h2>Login Page</h2>
+  <form action="https://httpbin.org/post" method="post" target="_blank">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required><br><br>
 
-    <h2>Login</h2>
-    <form>
-      <input type="text" placeholder="Username" required>
-      <input type="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
-  </div>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required><br><br>
+
+    <button type="submit">Login</button>
+  </form>
 </body>
 </html>
